kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quelpoke-amaury
  namespace: ampotier  # Mets le namespace que tu as créé, ou supprime cette ligne si tu veux `default`
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quelpoke
  template:
    metadata:
      labels:
        app: quelpoke
    spec:
      containers:
        - name: quelpoke-container
          image: thedude1/quelpoke:latest  # Assure-toi d’avoir bien pushé ton image sur Google Container Registry (GCR) ou Docker Hub
          ports:
            - containerPort: 8080  # Change si ton app écoute sur un autre port
          resources:
            limits:
             memory: "256Mi"
             cpu: "200m"
